lib_LTLIBRARIES = libpandad.la

INCLUDES 			= 		\
	-I$(top_srcdir)			\
	-I$(top_srcdir)/include	\
	-I$(top_srcdir)/libs	\
	-I$(top_srcdir)/datalib	\
	$(GNOME_INCLUDEDIR) \
	$(FIXED_CFLAGS)

libpandad_la_SOURCES	=		\
	misc.c		misc.h		\
	option.c	option.h	\
	LBSfunc.c	LBSfunc.h	\
	value.c		value.h		\
	SQLlex.c	SQLlex.h	\
	SQLparser.c	SQLparser.h	\
	DDparser.c	DDparser.h	\
	DDlex.c		DDlex.h
